--- a/public/index.html
+++ b/public/index.html
@@ -60,10 +60,10 @@
   </script>
 
 
-  <script src="../../exoskeleton.js"></script>
-  <script src="./davy.js"></script>
-  <script src="../backbone.localStorage.js"></script>
-  <script src="todos.js"></script>
+  <script src="../bower_components/exoskeleton/exoskeleton.js"></script>
+  <script src="../bower_components/davy/davy.js"></script>
+  <script src="../bower_components/exoskeleton.localStorage/backbone.localStorage.js"></script>
+  <script src="./todos.js"></script>
 
   </body>
 </html>
