--- a/public/index.html
+++ b/public/index.html
@@ -59,11 +59,7 @@
     <div class="todo-count"><b><%= remaining %></b> <%= remaining == 1 ? 'item' : 'items' %> left</div>
   </script>
 
-
-  <script src="../bower_components/exoskeleton/exoskeleton.js"></script>
-  <script src="../bower_components/davy/davy.js"></script>
-  <script src="../bower_components/exoskeleton.localStorage/backbone.localStorage.js"></script>
-  <script src="./todos.js"></script>
+  <script src="../bower_components/requirejs/require.js" data-main="main" type="text/javascript" charset="utf-8"></script>
 
   </body>
 </html>
