break out components into separate files, remove global variables

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Exoskeleton.js Todos</title>
-  <link rel="stylesheet" href="todos.css"/>
+  <link rel="stylesheet" href="css/todos.css"/>
 </head>
 
 <body>
